ENH: updated about.html in branch1

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
 <h1>Midong Zhou</h1>
 <p><strong>Welcome to CSCE 315 
 Lab!</strong></p>
+
+<p>I am a student</p>
 <img 
 src="https://brandguide.tamu.edu/assets/img/logos/tam-box-
 logo.png"/>
