--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <body>
 <h1>Midong Zhou</h1>
 <p><strong>Welcome to CSCE 315 
-Lab!</strong></p>
+Lab with super cool text</strong></p>
 <img 
 src="https://brandguide.tamu.edu/assets/img/logos/tam-box-
 logo.png"/>
